--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">clima</string>
     <string name="atualizar">Atualizar</string>
-    <string name="pesquisar">Pesquisar</string>
+    <string name="search">Pesquisar</string>
+    <string name="prompt_city">Ex: Belo Horizonte</string>
 </resources>
