--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">clima</string>
-    <string name="atualizar">Atualizar</string>
+    <string name="update">Atualizar</string>
     <string name="search">Pesquisar</string>
     <string name="prompt_city">Ex: Belo Horizonte</string>
+    <string name="error_invalid_response">Ocorreu um erro no recebimento dos dados\nPor favor tente novamente.</string>
 </resources>
